<resources>
    <string name="app_name">Zhoppi</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_hint">Abc@123</string>
    <string name="email_hint">abc@mail.com</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="client_id">682788896830-o11ka23n68vrf3rblj7f7mn2gme2t5ui.apps.googleusercontent.com</string>
    <string name="i_am_n_buyer">I am\nBuyer</string>
    <string name="i_am_nseller">I am\nSeller</string>
    <string name="name">Name</string>
    <string name="contact_no">Contact no.</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_street">Shop Street</string>
    <string name="shop_city">Shop City</string>
    <string name="shop_state">Shop State</string>
    <string name="pincode">PinCode</string>
    <string name="shop_gstin">Shop GSTIN</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="welcome_aboard">Welcome Aboard!</string>
    <string name="let_s_do_some">Let\'s Do Some</string>
    <string name="business">Business!</string>
    <string name="welcome">Welcome</string>
    <string name="for_logging_out">For Logging Out</string>
    <string name="zhoppi">Zhoppi</string>
    <string name="where_buyers_meet_sellers">Where Buyers Meet Sellers</string>
    <string name="welcome_message">Welcome, %1$s</string>
    <string name="add_item">Add Item</string>
    <string name="edit_shop_name">Edit Shop Name</string>
    <string name="item_photo">Item Photo</string>
    <string name="capture">Capture</string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="negotiable">Negotiable</string>
    <string name="non_negotiable">Non-Negotiable</string>
    <string name="add">Add</string>
    <string name="search_shop">Search Shop</string>
    <string name="search_item">Search Item</string>
    <string name="all_products">All Products</string>
    <string name="show_more">Show More</string>
    <string name="see_more">See More</string>
    <string name="item_image">Item Image</string>
    <string name="chat_now">Chat Now</string>
    <string name="placeholder">placeholder</string>
    <string name="textview">TextView</string>
    <string name="caller">caller</string>
    <string name="chatting">chatting</string>

</resources>