<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/productsImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/item_name" />
        <TextView
            android:id="@+id/productsName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/name"
            android:ellipsize="end"
            android:maxLines="2"/>
        <TextView
            android:id="@+id/productsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/price"/>
        <TextView
            android:id="@+id/productsNegotiable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:text="@string/negotiable"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>