<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemViewBuyerActivity">


    <ImageView
        android:id="@+id/displayItem"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/item_image"
        android:src="@drawable/ic_store"
        app:layout_constraintBottom_toTopOf="@+id/displayName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="placeholder"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/displayDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/displayDescription"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:maxLines="5"
        android:background="@color/light_grey"
        android:layout_marginBottom="24dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/displayNegotiable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/displayNegotiable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="left"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/openChat"
        app:layout_constraintEnd_toStartOf="@+id/displayPrice"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/displayPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:gravity="right"
        android:layout_marginBottom="28dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/openChat"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/openChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/chat_now"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/seeMore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seeMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/see_more"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>